--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-multi-status",
   "description": "Execute git status across multiple directories.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "author": {
     "name": "James Bloomer",
@@ -18,6 +18,6 @@
   ],
   "main": "./index.js",
   "bin": {
-    "tadaa": "./bin/mstat"
+    "tadaa": "./bin/mstat.js"
   }
 }
