--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mstat": "./bin/mstat.js"
   },
   "dependencies": {
-    "chalk": "^1.1.1"
+    "chalk": "^1.1.1",
+    "nodegit": "^0.11.5",
+    "repeat-string": "^1.5.2"
   }
 }
